--- a/public/scss/app.scss
+++ b/public/scss/app.scss
@@ -6,7 +6,7 @@
 
 body {
    // background: url("/img/login1.jpg");
-   background: rgba(158, 158, 158, 0.6);
+   background: #f1f1f3;
 }
 
 .my-img {
