--- a/public/scss/app.scss
+++ b/public/scss/app.scss
@@ -3,6 +3,7 @@
 @import 'mixin';
 @import 'utility-class';
 @import 'component';
+@import 'dashboard';
 
 body {
    // background: url("/img/login1.jpg");
