--- a/public/css/animate.css
+++ b/public/css/animate.css
@@ -19,3 +19,11 @@
 		transform: rotate(0deg);
 	}
 }
+@keyframes rotate {
+    0% {
+        transform: rotate(0);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
