--- a/public/css/app.css
+++ b/public/css/app.css
@@ -615,34 +615,6 @@ ol.my-breadcumb .my-breadcrumb-item.parent {
 .input-form.input-form-xl {
   height: 44px;
 }
-.input-form ~ .input-option {
-  display: none;
-  width: inherit;
-  max-height: 10vh;
-  overflow-y: scroll;
-  padding: 1px 2px;
-  position: absolute;
-  background: #FFFFFF;
-  z-index: 10000;
-}
-.input-form ~ .input-option.border-neutral-40-2#option {
-  min-height: 0;
-  max-height: 15vh;
-}
-.input-form ~ .input-option.rounded#option {
-  min-height: 0;
-  max-height: 15vh;
-}
-.input-form ~ .input-option option {
-  margin: 3px 0;
-  padding: 8px 10px;
-}
-.input-form ~ .input-option option:hover {
-  background: #EDEDED;
-}
-.input-form ~ .input-option option.new-option:hover {
-  background: #DFE0F3;
-}
 .input-form:focus {
   outline: 3px solid rgba(76, 77, 220, 0.2);
 }
@@ -1173,7 +1145,7 @@ ol.my-breadcumb .my-breadcrumb-item.parent {
   color: #F5F5F5;
   font: 400 14px/20px "Inter", sans-serif;
   border-radius: 10px 0 0 10px;
-  transition: 0.3s;
+  transition: 0.1s;
 }
 .sidebar .sidebar-body .sidebar-menu .sub-menu a i {
   margin-right: 10px;
@@ -1250,14 +1222,10 @@ ol.my-breadcumb .my-breadcrumb-item.parent {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1019607843);
 }
 
-@keyframes rotate {
-  0% {
-    transform: rotate(0);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
+input[readonly], textarea[readonly], select[readonly] {
+  background-color: #FFFFFF;
 }
+
 .dashboard-card {
   min-height: 120px;
   border: 0;
