--- a/public/scss/_component.scss
+++ b/public/scss/_component.scss
@@ -93,40 +93,6 @@ ol {
       height: 44px;
    }
 
-   & ~ .input-option {
-      display: none;
-      width: inherit;
-      max-height: 10vh;
-      overflow-y: scroll;
-      padding: 1px 2px;
-      position: absolute;
-      background: $my-neutral-10;
-      // background: transparent;
-      z-index: 10000;
-
-      &.border-neutral-40-2#option {
-         min-height: 0;
-         max-height: 15vh;
-      }
-      &.rounded#option {
-         min-height: 0;
-         max-height: 15vh;
-      }
-
-      option {
-         margin: 3px 0;
-         padding: 8px 10px;
-         &:hover {
-            background: $my-neutral-30;
-         }
-         &.new-option {
-            &:hover {
-               background: $my-primary-surface;
-            }
-         }
-      }
-   }
-
    &:focus {
       outline: 3px solid $my-primary-focus;
 
@@ -707,7 +673,7 @@ background-color: #3131a3;
                color: $my-neutral-20;
                font: $my-text-m-regular;
                border-radius: 10px 0 0 10px;
-               transition: .3s;
+               transition: .1s;
 
                i {
                 margin-right: 10px;
@@ -787,11 +753,6 @@ background-color: #3131a3;
     box-shadow: $my-shadow-2;
 }
 
-@keyframes rotate {
-    0% {
-        transform: rotate(0);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
+input[readonly],textarea[readonly],select[readonly] {
+    background-color: $my-neutral-10;
 }
