--- a/public/scss/_component.scss
+++ b/public/scss/_component.scss
@@ -719,7 +719,7 @@ background-color: #3131a3;
    }
 }
 
-.load-state {
+.loader {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -730,9 +730,21 @@ background-color: #3131a3;
     background-color: $my-primary-surface;
 
     .load-state-item {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
         color: $my-neutral-90;
         font-size: 40px;
         animation: rotate 2s infinite;
+    }
+    .top {
+        width: 70px;
+        height: 70px;
+        background: transparent;
+        border-top: 2.2px solid #3131a3;
+        border-bottom: 2.2px solid #3131a3;
+        border-radius: 100%;
+        bottom: -10px;
     }
 }
 
