--- a/public/scss/_component.scss
+++ b/public/scss/_component.scss
@@ -598,6 +598,14 @@ background-color: #3131a3;
     }
 }
 
+.sidebar-main {
+    background: #4d7ce4;
+    min-height: 100vh;
+    width: 18%;
+}
+.main-content {
+
+}
 
 .sidebar {
     background: #4d7ce4;
@@ -633,6 +641,7 @@ background-color: #3131a3;
             padding: 0 20px;
             cursor: pointer;
             border-radius: 10px 0 0 10px;
+            color: #fff;
 
             img {
                 filter: invert(100%);
@@ -648,8 +657,13 @@ background-color: #3131a3;
                color: $my-neutral-20;                
             }
 
+            a{
+                color: white;
+            }
+
             &:hover, &.active {
                @include side-menu(false);
+               color: #000;
 
                & img {
                 filter: invert(0%);
