--- a/public/scss/_component.scss
+++ b/public/scss/_component.scss
@@ -33,7 +33,8 @@
         font: $my-text-m-medium;
     }
     tbody tr td {
-        font: $my-text-s-medium;
+        font: $my-text-m-medium;
+        // font: $my-text-s-medium;
     }
 }
 
