--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1111,6 +1111,7 @@ ol.my-breadcumb .my-breadcrumb-item.parent {
   cursor: pointer;
   border-radius: 10px 0 0 10px;
   color: #f5f5f5;
+  transition: .2s;
 }
 .sidebar .sidebar-body .sidebar-menu .menu img {
   filter: invert(100%);
@@ -1133,12 +1134,25 @@ ol.my-breadcumb .my-breadcrumb-item.parent {
   position: relative;
   border-radius: 25px 0 0 25px;
   color: #000;
+  transition: .2s;
+}
+.sidebar .sidebar-body .sidebar-menu .menu:hover {
+  background-color: #3267E3 !important;
+  /* border-radius: 8px; */
+  padding: 0 12px 0 12px;
+  color: white;
+}
+.sidebar .sidebar-body .sidebar-menu .menu.active span {
+  color: #0A0A0A;
+}
+.sidebar .sidebar-body .sidebar-menu .menu:hover span {
+  color: #fff;
 }
 .sidebar .sidebar-body .sidebar-menu .menu:hover img, .sidebar .sidebar-body .sidebar-menu .menu.active img {
-  filter: invert(0%);
+  /* filter: invert(0%); */
 }
 .sidebar .sidebar-body .sidebar-menu .menu:hover span, .sidebar .sidebar-body .sidebar-menu .menu.active span {
-  color: #0A0A0A;
+  /* color: #0A0A0A; */
 }
 .sidebar .sidebar-body .sidebar-menu .sub-menu {
   display: flex;
